--- a/NAudio.Wasapi/NAudio.Wasapi.csproj
+++ b/NAudio.Wasapi/NAudio.Wasapi.csproj
@@ -15,6 +15,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>naudio-icon.png</PackageIcon>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+    <AssemblyName>App.$(MSBuildProjectName)</AssemblyName>
   </PropertyGroup>
 
   <!-- needed for perfomance profiling unit tests -->
