--- a/NAudio.WinMM/NAudio.WinMM.csproj
+++ b/NAudio.WinMM/NAudio.WinMM.csproj
@@ -13,6 +13,7 @@
     <Copyright>© Mark Heath 2023</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>naudio-icon.png</PackageIcon>
+    <AssemblyName>App.$(MSBuildProjectName)</AssemblyName>
   </PropertyGroup>
 
 	<!-- needed for perfomance profiling unit tests -->
