--- a/NAudio/NAudio.csproj
+++ b/NAudio/NAudio.csproj
@@ -15,6 +15,7 @@
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\NAudioStrongNameKey.snk</AssemblyOriginatorKeyFile>
     <PackageIcon>naudio-icon.png</PackageIcon>
+    <AssemblyName>App.$(MSBuildProjectName)</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
